# spartan-st

./: CITATION.cff  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
envs/: environment.core.yml  environment.paper.lock.yml
src/spartan/: __init__.py  _core.py  cli.py  pl.py  tl.py
